Fix overflowing header issue and positioning

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -3,10 +3,8 @@
 .header {
   position: fixed;
   top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
-  max-width: 1440px;
+  left: 0;
+  width: 100vw;
   z-index: 3;
   background-color: var(--background-color);
   padding-block: 26px;
